# ClothSimulator

./: .gitignore  CMakeLists.txt  README.md  input.txt  output.txt  output_b.txt  output_impacts.txt  output_intersections.txt  output_post.txt  output_sizing.txt  standard.txt  standard_a.txt  standard_b.txt  standard_impacts.txt  standard_intersections.txt  standard_post.txt  standard_sizing.txt
CudaTest/: CMakeLists.txt  main.cu
conf/: crush.json  debug.json  dress-blue.json  dress-yellow.json  five-sphere.json  flag.json  funnel.json  hang.json  hang32.json  hang64.json  karate.json  sleeve.json  sphere.json  sphere_fixed_mesh.json
lib/alglib/: CMakeLists.txt  manual.cpp.html
lib/alglib/src/: alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  diffequations.h  fasttransforms.cpp  fasttransforms.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  kernels_avx2.cpp  kernels_avx2.h  kernels_fma.cpp  kernels_fma.h  kernels_sse2.cpp  kernels_sse2.h  linalg.cpp  linalg.h  optimization.cpp  optimization.h  solvers.cpp  solvers.h  specialfunctions.cpp  specialfunctions.h  statistics.cpp  statistics.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
meshes/: dress.ma  dress2.ma  dress3.ma
meshes/scripts/: Obj.hs
shader/: EdgeFragment.glsl  EdgeFragmentShader.glsl  FaceFragment.glsl  FaceFragmentShader.glsl  IndexFragment.glsl  Vertex.glsl  VertexShader.glsl
src/: BVH.cpp  BVH.cu  BVH.cuh  BVH.hpp  BVHHelper.cu  BVHHelper.cuh  BVHNode.cpp  BVHNode.cu  BVHNode.cuh  BVHNode.hpp  BackupFace.cu  BackupFace.cuh  Bounds.cpp  Bounds.cu  Bounds.cuh  Bounds.hpp  Cloth.cpp  Cloth.cu  Cloth.cuh  Cloth.hpp  ClothHelper.cu  ClothHelper.cuh  CollisionHelper.cu  CollisionHelper.cuh  CollisionHelper.hpp  CudaHelper.cu  CudaHelper.cuh  Disk.cpp  Disk.cu  Disk.cuh  Disk.hpp  Edge.cpp  Edge.cu  Edge.cuh  Edge.hpp  Face.cpp  Face.cu  Face.cuh  Face.hpp  Handle.cpp  (+115 more)
src/constraint/: Constraint.cpp  Constraint.cu  Constraint.cuh  Constraint.hpp  EqualConstraint.cpp  EqualConstraint.cu  EqualConstraint.cuh  EqualConstraint.hpp  Gradient.cpp  Gradient.cu  Gradient.cuh  Gradient.hpp  Hessian.cpp  Hessian.cu  Hessian.cuh  Hessian.hpp
src/optimization/: CollisionOptimization.cu  CollisionOptimization.cuh  ImpactZoneOptimization.cpp  ImpactZoneOptimization.cu  ImpactZoneOptimization.cuh  ImpactZoneOptimization.hpp  Optimization.cpp  Optimization.cu  Optimization.cuh  Optimization.hpp  OptimizationHelper.cu  OptimizationHelper.cuh  SeparationOptimization.cpp  SeparationOptimization.cu  SeparationOptimization.cuh  SeparationOptimization.hpp
test/: CMakeLists.txt  test.cpp
